webkit fix hopefuly for letter spacing issue

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -171,7 +171,7 @@ ul.main-navigation__list{
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-  #mobile-menu ul li a { letter-spacing: -0.04em; }
+  #mobile-menu ul li a { letter-spacing: -0.05em; }
 }
 
 img.mobile-menu__logo{
